add helpers for sentence segmentation

--- a/dev_notebooks/07_mimic_pneumonia_custom_sentences_11162019.ipynb
+++ b/dev_notebooks/07_mimic_pneumonia_custom_sentences_11162019.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,10 +215,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n\\n     DATE: [**3106-8-10**] 11:46 AM\\n     CHEST (PORTABLE AP)                                             Clip # [**Clip Number (Radiology) 7189**]\\n     Reason: pneumonia                                                   \\n     ______________________________________________________________________________\\n     UNDERLYING MEDICAL CONDITION:\\n             70 year old woman S/P MVA                                                \\n             \\n     REASON FOR THIS EXAMINATION:\\n      pneumonia                                                                       \\n     ______________________________________________________________________________\\n                                     FINAL REPORT\\n     PORTABLE CHEST:\\n     \\n     Compared to 1 day earlier.\\n     \\n     INDICATION: Pneumonia. S/P motor vehicle accident.\\n     \\n     An ETT and NG tube remain in satisfactory position. There is widening of the\\n     mediastinum with increased soft tissue density noted lateral to the aortic\\n     knob calcifications. Review of report of CT torso dated [**3106-8-3**] described no\\n     evidence of aortic injury, and the observed appearance of the mediastinum\\n     remains stable compared to the earlier portable radiographs dating back to\\n     [**3106-8-3**]. The pulmonary vascularity is likely accentuated by low lung volumes\\n     and portable supine technique. There has been interval improvement in\\n     previously described basilar lung opacities with residual opacity more\\n     prominent at the left base on the right. There is a persistent small left\\n     pleural effusion.\\n     \\n     Also noted is a left subclavian vascular catheter terminating in the left\\n     brachiocephalic vein.\\n     \\n     IMPRESSION: 1) Stable widening of mediastinum. This is without change since\\n     recent studies and correlation with report of CT torso of [**3106-8-3**] describes no\\n     mediastinal hematoma. This is likely due to extensive mediastinal fat as shown\\n     on the recent CT torso.\\n     \\n     2) Improving basilar opacities which may reflect improving atelectasis,\\n     contusion or aspiration. Underlying infectious process in the left lower lobe\\n     is not fully excluded.\\n     \\n     3) Small left pleural effusion. Right pleural effusion cannot be assessed due\\n     to exclusion of costophrenic focus from the study.\\n\\n'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texts[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "     DATE: [**3106-8-10**] 11:46 AM\n",
+      "     CHEST (PORTABLE AP)                                             Clip # [**Clip Number (Radiology) 7189**]\n",
+      "     Reason: pneumonia                                                   \n",
+      "     ______________________________________________________________________________\n",
+      "     UNDERLYING MEDICAL CONDITION:\n",
+      "             70 year old woman S/P MVA                                                \n",
+      "             \n",
+      "     REASON FOR THIS EXAMINATION:\n",
+      "      pneumonia                                                                       \n",
+      "     ______________________________________________________________________________\n",
+      "                                     FINAL REPORT\n",
+      "     PORTABLE CHEST:\n",
+      "     \n",
+      "     Compared to 1 day earlier.\n",
+      "     \n",
+      "     INDICATION: Pneumonia. S/P motor vehicle accident.\n",
+      "     \n",
+      "     An ETT and NG tube remain in satisfactory position. There is widening of the\n",
+      "     mediastinum with increased soft tissue density noted lateral to the aortic\n",
+      "     knob calcifications. Review of report of CT torso dated [**3106-8-3**] described no\n",
+      "     evidence of aortic injury, and the observed appearance of the mediastinum\n",
+      "     remains stable compared to the earlier portable radiographs dating back to\n",
+      "     [**3106-8-3**]. The pulmonary vascularity is likely accentuated by low lung volumes\n",
+      "     and portable supine technique. There has been interval improvement in\n",
+      "     previously described basilar lung opacities with residual opacity more\n",
+      "     prominent at the left base on the right. There is a persistent small left\n",
+      "     pleural effusion.\n",
+      "     \n",
+      "     Also noted is a left subclavian vascular catheter terminating in the left\n",
+      "     brachiocephalic vein.\n",
+      "     \n",
+      "     IMPRESSION: 1) Stable widening of mediastinum. This is without change since\n",
+      "     recent studies and correlation with report of CT torso of [**3106-8-3**] describes no\n",
+      "     mediastinal hematoma. This is likely due to extensive mediastinal fat as shown\n",
+      "     on the recent CT torso.\n",
+      "     \n",
+      "     2) Improving basilar opacities which may reflect improving atelectasis,\n",
+      "     contusion or aspiration. Underlying infectious process in the left lower lobe\n",
+      "     is not fully excluded.\n",
+      "     \n",
+      "     3) Small left pleural effusion. Right pleural effusion cannot be assessed due\n",
+      "     to exclusion of costophrenic focus from the study.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(texts[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t"
+   ]
   },
   {
    "cell_type": "markdown",
