--- a/notebooks/02_Modifiers.ipynb
+++ b/notebooks/02_Modifiers.ipynb
@@ -94,7 +94,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1"
+    "## Example 1: Basic Usage\n",
+    "This example demonstrates the objects and attributes described above."
    ]
   },
   {
@@ -112,30 +113,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = ConTextComponent(nlp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "context = ConTextComponent(nlp)\n",
+    "\n",
     "context.add(item_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = nlp(\"There is no evidence of pneumonia.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,18 +129,20 @@
        "There is no evidence of pneumonia."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "doc = nlp(\"There is no evidence of pneumonia.\")\n",
+    "\n",
     "context(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +151,7 @@
        "[<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_experienced False\n"
+     ]
+    }
+   ],
    "source": [
     "docs = list(nlp.pipe(texts))\n",
     "for doc in docs:\n",
@@ -322,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -350,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.matcher.Matcher at 0x114a2f848>"
+       "<spacy.matcher.matcher.Matcher at 0x116badcc8>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x1148b6e48>"
+       "<spacy.matcher.phrasematcher.PhraseMatcher at 0x117bc6978>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +535,7 @@
        "There is no evidence of pneumonia but there is CHF"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +556,7 @@
        "<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +577,7 @@
        "pneumonia but there is CHF"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +617,7 @@
        "There is no evidence of pneumonia but there is CHF"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +638,7 @@
        "<TagObject> [no evidence of, DEFINITE_NEGATED_EXISTENCE]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +659,7 @@
        "pneumonia"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +727,7 @@
        "no history of"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +749,7 @@
        " <TagObject> [history, HISTORICAL]]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +780,7 @@
        "no history of"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -806,12 +801,13 @@
        "[<TagObject> [no history of, DEFINITE_NEGATED_EXISTENCE]]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Only one modifier is left\n",
     "doc._.context_graph.modifiers"
    ]
   },
@@ -832,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +849,7 @@
        " 'HISTORICAL': ('is_current', False)}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,10 +878,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define modifiers and Span attributes\n",
     "custom_attrs = {'DEFINITE_NEGATED_EXISTENCE': ('is_negated', True),\n",
     " 'FAMILY_HISTORY': ('is_family_history', True),\n",
     "}"
@@ -893,26 +890,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Register extensions\n",
     "Span.set_extension(\"is_negated\", default=False)\n",
     "Span.set_extension(\"is_family_history\", default=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "context = ConTextComponent(nlp, add_attrs=custom_attrs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -922,56 +911,32 @@
        " 'FAMILY_HISTORY': ('is_family_history', True)}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "context = ConTextComponent(nlp, add_attrs=custom_attrs)\n",
     "context.context_attributes_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "item_data = [ConTextItem(\"no evidence of\", \"DEFINITE_NEGATED_EXISTENCE\", \"FORWARD\"),\n",
     "            ConTextItem(\"family history\", \"FAMILY_HISTORY\", \"FORWARD\"),\n",
-    "            ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            ]\n",
+    "\n",
     "context.add(item_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = nlp(\"There is no evidence of pneumonia. Family history of diabetes.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc.ents = doc[5:6], doc[-2:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -980,18 +945,22 @@
        "(pneumonia, diabetes)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "doc = nlp(\"There is no evidence of pneumonia. Family history of diabetes.\")\n",
+    "\n",
+    "doc.ents = doc[5:6], doc[-2:-1]\n",
+    "\n",
     "doc.ents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +977,7 @@
        "There is no evidence of pneumonia. Family history of diabetes."
       ]
      },
-     "execution_count": 89,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,8 +987,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The new attributes are now available in `ent._`:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,23 +1056,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConTextItem: [are ruled out, DEFINITE_NEGATED_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [be ruled out, INDICATION, None, BACKWARD]\n",
-      "ConTextItem: [being ruled out, INDICATION, None, BACKWARD]\n",
-      "ConTextItem: [can be ruled out, DEFINITE_NEGATED_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [cannot be excluded, AMBIVALENT_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [cannot totally be excluded, PROBABLE_NEGATED_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [could be ruled out, DEFINITE_NEGATED_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [examination, INDICATION, [{'LOWER': {'REGEX': '(examination|exam|study)'}}], BACKWARD]\n",
-      "ConTextItem: [free, DEFINITE_NEGATED_EXISTENCE, None, BACKWARD]\n",
-      "ConTextItem: [has been ruled out, DEFINITE_NEGATED_EXISTENCE, None, BACKWARD]\n"
+      "ConTextItem(literal='are ruled out', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='be ruled out', category='INDICATION', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='being ruled out', category='INDICATION', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='can be ruled out', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='cannot be excluded', category='AMBIVALENT_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='cannot totally be excluded', category='PROBABLE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='could be ruled out', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='examination', category='INDICATION', pattern=[{'LOWER': {'REGEX': '(examination|exam|study)'}}], rule='BACKWARD')\n",
+      "ConTextItem(literal='free', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n",
+      "ConTextItem(literal='has been ruled out', category='DEFINITE_NEGATED_EXISTENCE', pattern=None, rule='BACKWARD')\n"
      ]
     }
    ],
@@ -1107,20 +1083,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rule': 'BACKWARD',\n",
-       " 'category': 'DEFINITE_NEGATED_EXISTENCE',\n",
-       " 'comment': '',\n",
+       "{'metadata': None,\n",
+       " 'literal': 'has been ruled out',\n",
        " 'pattern': None,\n",
-       " 'literal': 'has been ruled out'}"
+       " 'category': 'DEFINITE_NEGATED_EXISTENCE',\n",
+       " 'rule': 'BACKWARD'}"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -1156,7 +1132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'item_data': [{'rule': 'BACKWARD', 'category': 'DEFINITE_NEGATED_EXISTENCE', 'comment': '', 'pattern': None, 'literal': 'are ruled out'}, {'rule': 'BACKWARD', 'category': 'INDICATION', 'comment': '', 'pattern': None, 'literal': 'be ruled out'}]}\n"
+      "{'item_data': [{'metadata': None, 'literal': 'are ruled out', 'pattern': None, 'category': 'DEFINITE_NEGATED_EXISTENCE', 'rule': 'BACKWARD'}, {'metadata': None, 'literal': 'be ruled out', 'pattern': None, 'category': 'INDICATION', 'rule': 'BACKWARD'}]}\n"
      ]
     }
    ],
